# Windows-MCP

./: .gitignore  README.md  manifest.json  package-lock.json  server.json
.claude/agents/: kaizi-dev-agent.md
.github/workflows/: kaizi-ci.yml
arbitrage-website/: README.md  STEPS.md
arbitrage-website/backend/: README.md  pyproject.toml
arbitrage-website/backend/app/: config.py  main.py  models.py
arbitrage-website/backend/app/agents/: orchestrator.py  scanner.py  validator.py
arbitrage-website/backend/app/api/: routes.py
arbitrage-website/backend/app/markets/: base.py
arbitrage-website/backend/app/markets/crypto/: __init__.py  binance.py  bitstamp.py  coinbase.py  kraken.py
arbitrage-website/backend/app/markets/retail/: base_stub.py
arbitrage-website/backend/app/markets/sports_betting/: odds_api.py
arbitrage-website/backend/tests/: test_binance_adapter.py  test_kraken_adapter.py  test_scanner.py  test_validator.py
arbitrage-website/frontend/: .env.local.example  .gitignore  README.md  package-lock.json  package.json
kaizi/: .gitignore  README.md  docker-compose.yml
kaizi/app/: .env.example  .gitignore  App.tsx  DEPLOYMENT.md  README.md  app.json  babel.config.js  eas.json  package-lock.json  package.json  vitest.config.ts
kaizi/docs/: DEPLOYMENT-READINESS.md  GETTING-CREDENTIALS.md  architecture.md  confidence-report-v3.md  (+6 more)
tests/: test_analytics.py  test_cli_legacy_flags.py  test_config_stateless.py  test_flash_overlay.py  test_iserror_compliance.py  test_snapshot_display_filter.py  test_startup_task.py  test_tree_ia2.py  test_tree_views.py
(+160 files in other folders)
